--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,8 @@
 <h1>Mental Health Tracker</h1>
 
 <h5>NPM: </h5>
-<p>2306165931</p> <!-- Ubah sesuai dengan npm kamu -->
+<p>{{ npm }}<p>
 <h5>Name: </h5>
-<p>Namira Aulia</p> <!-- Ubah sesuai dengan nama kamu -->
+<p>{{ name }}<p>
 <h5>Class: </h5>
-<p>PBP C</p> <!-- Ubah sesuai dengan kelas kamu -->
+<p>{{ class }}<p>
