--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -11,7 +11,7 @@
 <h5>Class:</h5>
 <p>{{ class }}</p>
 
-...
+
 {% if not mood_entries %}
 <p>Belum ada data mood pada mental health tracker.</p>
 {% else %}
@@ -41,4 +41,10 @@
 <a href="{% url 'main:create_mood_entry' %}">
   <button>Add New Mood Entry</button>
 </a>
+
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 {% endblock content %}
